--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap' rel='stylesheet' />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Patronative - user module"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Patronative</title>
+    <title>Patron-a-tive</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
