--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel='shortcut icon' href='/favicon.png' />
     <meta name='viewport' content='initial-scale=1.0, width=device-width' />
     <link rel='preconnect' href='https://fonts.gstatic.com' />
     <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap' rel='stylesheet' />
